# android_vendor_qcom_proprietary

./: README.md
android-perf/: profiles.mk
android-perf/io-p/: Android.mk
android-perf/iop-hal/: Android.bp
android-perf/mp-ctl/: ActiveRequestList.cpp  BoostConfigReader.cpp  MpctlUtils.cpp  Request.cpp  ResourceInfo.cpp  ResourceQueues.cpp  RestoreHandler.cpp  RestoreHandler.h  Target.h
android-perf/perf-hal/: Android.mk  PerfGlueLayer.cpp  perfHal.go
bluetooth/a2dp/: Android.mk
bluetooth/audio_bluetooth_qti_hw/: audio_bluetooth_hw.cc  audio_bluetooth_hw.h
bluetooth/btaudio_offload/: btaudio_offload.cpp  btaudio_offload.h  ldac_level_bit_rate_lookup.h
bluetooth/btconfig/: Android.mk  btconfig.c  masterblaster.h
bluetooth/bthost_ipc/: Android.mk  bthost_ipc.cpp  bthost_ipc.h
bluetooth/bthost_ipc_qti/: Android.mk  NOTICE
bluetooth/hidl_transport/: Android.mk
cne/: cne-test_vendor_product.mk  cne_vendor_board_noship.mk
cne/OperatorLookup/: Android.bp
cne/api/: Android.bp  ICneObserverDefs.h
cne/cacertclient/: Android.bp  ICertificateCallback.h  ICertificateRequest.h
cne/cneQmiUtils/: Android.bp
cne/iwlanservice/: Android.mk  LICENSE
common/bengal/: BoardConfigVendor.mk
common/config/: device-vendor-qssi.mk  sdclang-pureAOSP.json  sdclang.json
common/kona/: BoardConfigVendor.mk
common/lahaina/: BoardConfigVendor.mk
common/msm8916/: BoardConfigVendor.mk
common/msm8952_32/: BoardConfigVendor.mk
common/msm8952_64/: BoardConfigVendor.mk
common/msmnile_au/: BoardConfigVendor.mk
common/sdm660_32/: BoardConfigVendor.mk
common/sdm710/: BoardConfigVendor.mk
common/sdm845/: BoardConfigVendor-SDM845-pureAOSP.mk
common/sm6150/: BoardConfigVendor.mk
commonsys-intf/bluetooth/: bt-vendor-proprietary-board.mk  bt-vendor-proprietary-product.mk
commonsys-intf/data/: Android.bp
commonsys-intf/diag/: Android.bp  configure.ac
commonsys-intf/mm-audio/: Android.mk
commonsys-intf/mm-osal/: Android.mk
configstore/: Android.mk  audio.xml  configparser.sh  prebuild_configstore.mk  xmlparser.h
data/qti/: Android.mk
diag/: Makefile.am  configure.ac
diag/test/: Makefile.am
diag/uart_log/: Android.mk  Makefile.am
fastmmi/: Android.mk  mmi.mk
ftm/: Makefile  Makefile.am  ftm_bt.c  ftm_bt.h  ftm_bt_power_pfal_linux.c  ftm_fm_pfal_linux_3990.c  ftm_nfcnq.h  ftm_nfcnq_fwdl.h  ftm_nfcnq_test.h  ftm_wlan.c
gps/engine-plugin/simulator/: EnginePluginAPISimulator.cpp  Makefile.am  README.txt  configure.ac  ep-ref-simulator.pc.in
gps/framework/utils/diag_iface/: Android.mk  Makefile.am  configure.ac
gps/qapi-demo-app/: Makefile.am  configure.ac  main.cpp  qapi-demo-app.pc.in
gps/test/IZatRemoteApi/: IZatRemoteApiTest.cpp  Makefile.am  configure.ac  izat-remote-api-test.pc.in
ims-ship/: ims_vendor_product_noship.mk
interfaces/: .gitignore  Android.bp  current.txt
mdm-helper/: mdm_helper.c  mdm_helper_private.h
mm-audio/: Android.mk
mm-camera/: sdllvm-flag-defs.mk
mm-still/: Android.mk
mm-video/: Android.mk
nqnfc-firmware/: libnfc-qrd-NQ4XX.conf
prebuilt_HY11/: links
qcom/proprietary/commonsys-intf/qmi-framework/qcci/src/: Makefile.am  qmi_cci_xport_qrtr.c
qcom/proprietary/gps/garden-app/GARDEn/: Makefile.am  NOTICE  main.cpp
qcom/proprietary/gps/garden-app/GARDEn/android/: HidlAPI.cpp  HidlAPI.h
qcom/proprietary/gps/garden-app/GARDEn/cdfwapi_case/: cdfwApiCase.h
qcom/proprietary/gps/garden-app/GARDEn/clientapi_case/: LocationClientApiCase.cpp  LocationClientApiCase.h
qcom/proprietary/gps/garden-app/GARDEn/garden_framework/: GardenFramework.h  GardenUtil.h  IGnssAPI.h
qcom/proprietary/gps/garden-app/GARDEn/gnss_case/: GnssCase.h  GnssCb.cpp
qcom/proprietary/gps/garden-app/GARDEn/gnss_multiclient_case/: GnssMultiClientCaseUtils.cpp  GnssMultiClientFileTest.cpp  GnssMultiClientHidlIGnss.h  GnssMultiClientHidlIGnssCb.cpp  GnssMultiClientHidlILocHidlGnss.cpp  GnssMultiClientHidlILocHidlGnssCb.cpp  GnssMultiClientHidlILocHidlGnssCb.h
qcom/proprietary/gps/garden-app/GARDEn/locationapi_api/: GnssLocationAPI.cpp  GnssLocationAPI.h  GnssLocationAPIClient.cpp  GnssMultiClientLocationAPIClient.h
qcom/proprietary/gps/garden-app/GARDEn/sample_case/: Android.mk
qcom/proprietary/mm-audio/pulseaudio/audio_loopback/: Makefile.am  configure.ac
qcom/proprietary/mm-audio/pulseaudio/effects/: Makefile.am  NOTICE
qcom/proprietary/mm-audio/pulseaudio/effects/inc/: pa_qti_effect.h  pa_qti_effect_audiosphere.h  pa_qti_effect_bassboost.h  pa_qti_effect_equalizer.h  pa_qti_effect_presetreverb.h
qcom/proprietary/mm-audio/pulseaudio/effects/src/: pa_qti_effect.c
qcom/proprietary/mm-audio/pulseaudio/effects/test/: pa_qti_effect_test.c  pa_qti_effect_test.h
qcom/proprietary/qmi-framework/qsocket/: Makefile.am
qcril-hal/: Android.mk  clean.sh
qcril-qmi-services/: Android.mk  circuit_switched_video_telephony_v01.c  coexistence_service_v01.c  device_management_service_v01.c  lte_v01.c  radio_frequency_radiated_performance_enhancement_v01.c  specific_absorption_rate_v01.c  subsystem_control_v02.c  user_identity_module_remote_v01.c  user_identity_module_v01.c  voice_nas_services_common_v01.c  voice_service_common_v02.c  voice_service_v02.c
qcril-qmi-services-headers/: Android.mk  access_terminal_service_v01.h  card_application_toolkit_v02.h  coexistence_service_v01.h  device_management_service_v01.h  radio_frequency_radiated_performance_enhancement_v01.h  user_identity_module_remote_v01.h  user_identity_module_v01.h
qdssagent/: Android.mk  qdssagent-ship-vendor-product.mk
qmi/: qmi_data_vendor_product.mk
qmi-framework/: Android.mk  Makefile.am  configure.ac
resource-overlay/: overlay.mk
thermal-engine/: Android.mk  Makefile.am  limits_partition_write.h  readme.txt  ss-data.c  thermal.c  thermal_config_v2.c  thermal_kernel_monitor.c  thermal_kernel_monitor.h  thermal_monitor-data-8916.c  thermal_monitor-data.c  thermal_monitor.c
time-services/: Android.mk  AndroidManifest.xml  localdefs.h  time_service_v01.c  wlan_time_service_v01.c
vpp/: common.mk
wfd/: Android.mk
wigig/: wigig_board.mk  wigig_product.mk
(+7154 files in other folders)
